<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TheElderScrollsQuiz</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_standard_question">StandardQuestionActivity</string>
    <string name="banner_ad_unit_id">ca-app-pub-6998661440154045/8459425411</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="play_game_button">Play Game!</string>
    <string name="how_to_play_button">How to play</string>
    <string name="achievements_button">Achievements</string>
    <string name="help_button">Help</string>
    <string name="credits_button">Credits</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_questions_list">QuestionsList</string>
    <string name="book_icon_desc">bookIconBanner</string>
    <string name="title_activity_game_menu">GameMenuActivity</string>
    <string name="title_activity_game_help">GameHelpActivity</string>
    <string name="instructions">Thank you for installing this game! In order to play, pick a category and choose one of the quizzes from that category. \n You will score points based on correct answers.
    A goal of this game is to have a leader boards, so you can compete against others. sssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssss
    ssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssss
    ssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssss
    ssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssss
    ssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssss
    ssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssss
    ssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssss</string>
    <string name="title_activity_quiz">QuizActivity</string>
    <string name="category">category</string>

</resources>
