<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="@drawable/background4">

    <fragment
        android:id="@+id/adFragment"
        android:name="com.littlewitgames.theelderscrollsquiz.AdFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout="@layout/fragment_ad"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/book"
        android:src="@drawable/book_icon2"
        android:contentDescription="@string/book_icon_desc"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play_game_button"
        android:id="@+id/playButton"
        android:layout_centerHorizontal="true"
        android:width="@dimen/menu_button_width"
        android:layout_marginTop="@dimen/menu_button_margin"
        android:layout_below="@id/book"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/how_to_play_button"
        android:id="@+id/howButton"
        android:layout_below="@id/playButton"
        android:layout_centerHorizontal="true"
        android:width="@dimen/menu_button_width"
        android:layout_marginTop="@dimen/menu_button_margin"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/achievements_button"
        android:id="@+id/achievementsButton"
        android:layout_below="@+id/howButton"
        android:layout_centerHorizontal="true"
        android:width="@dimen/menu_button_width"
        android:layout_marginTop="@dimen/menu_button_margin" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/credits_button"
        android:id="@+id/creditButton"
        android:layout_centerHorizontal="true"
        android:width="@dimen/menu_button_width"
        android:layout_marginTop="@dimen/menu_button_margin"
        android:layout_below="@id/achievementsButton"
        android:layout_centerVertical="true" />


</RelativeLayout>
